[gd_scene load_steps=2 format=3 uid="uid://cmllbv7iyg5cc"]

[ext_resource type="Script" uid="uid://d20fxaw0oo68f" path="res://scenes/screens/scripts/settings_screen.gd" id="1_emdcu"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emdcu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FileNameForm" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Save "

[node name="ResetButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Hard Reset"

[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_reset_pressed"]
